; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_http.c_HttpProtocol_end_request.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_http.c_HttpProtocol_end_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ERROR_IO_PENDING = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"HttpEndRequest failed: %u\0A\00", align 1
@E_FAIL = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @HttpProtocol_end_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HttpProtocol_end_request(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @HttpEndRequestW(i32 %7, i32* null, i32 0, i32 0)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %1
  %12 = call i64 (...) @GetLastError()
  %13 = load i64, i64* @ERROR_IO_PENDING, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = call i64 (...) @GetLastError()
  %17 = call i32 @FIXME(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i64 %16)
  %18 = load i32, i32* @E_FAIL, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %11, %1
  %20 = load i32, i32* @S_OK, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %15
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @HttpEndRequestW(i32, i32*, i32, i32) #1

declare dso_local i64 @GetLastError(...) #1

declare dso_local i32 @FIXME(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
